docs: added readme feat: added weight and application has been deployed
